Segundo respaldo tarea fase1 LIC

--- a/INICIO/INICIO.html
+++ b/INICIO/INICIO.html
@@ -12,12 +12,12 @@
 <body>
     <div class="inicio-container">
         <div class="header">
-            <span>HI, JOHN</span>
+            <span>Ash Ketchum</span>
             <div class="logo">
                 <img src="../IMAGENES/pokemon_bank_logo.png" alt="Logo Banco">
             </div>
             <div class="time">
-                <span>10:05 AM, 9 AUG</span>
+                <span>10:05 AM, 14 Octubre</span>
             </div>
         </div>
 
@@ -25,10 +25,10 @@
 
         <div class="services">
             <button class="service-btn" onclick="location.href='../DEPOSITO/deposito.html'">DEPÓSITO</button>
-            <button class="service-btn">CONSULTA DE SALDO</button>
+            <button class="service-btn" onclick="location.href='../CONSULTA DE SALDOS/consulta_saldos.html'">CONSULTA DE SALDO</button>
             <button class="service-btn" onclick="location.href='../RETIRO/retiro.html'">RETIRO</button>
-            <button class="service-btn">PAGO DE SERVICIOS</button>
-            <button class="service-btn">HISTORIAL DE TRANSACCIONES</button>
+            <button class="service-btn" onclick="location.href='../SERVICIOS/servicios.html'">PAGO DE SERVICIOS</button>
+            <button class="service-btn" onclick="location.href='../historial/historial.html'">HISTORIAL DE TRANSACCIONES</button>
         </div>
 
         <div class="buttons">
