--- a/DEPOSITO/deposito.html
+++ b/DEPOSITO/deposito.html
@@ -11,12 +11,12 @@
 <body>
     <div class="inicio-container">
         <div class="header">
-            <span>HI, JOHN</span>
+            <span>Ash Ketchums</span>
             <div class="logo">
                 <img src="../IMAGENES/pokemon_bank_logo.png" alt="Logo Banco">
             </div>
             <div class="time">
-                <span>10:05 AM, 9 AUG</span>
+                <span>10:05 AM, 14 Octubre</span>
             </div>
         </div>
 
