--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="carousel-container">
             <!-- Carrusel -->
             <div class="carousel">
-                <a href="PIN/PIN.html" class="card card1">1</a>
-                <a href="pin.html" class="card card2">2</a>
+                <a href="PIN/PIN.html" class="card card1"></a>
+                <a href="PIN/PIN.html" class="card card2"></a>
                 <a href="pin.html" class="card card3">3</a>
                 <a href="pin.html" class="card card4">4</a>
                 <a href="pin.html" class="card card5">5</a>
