--- a/INICIO/INICIO.html
+++ b/INICIO/INICIO.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Selección de Servicio</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="inicio.css">
-    <!-- Incluir SweetAlert desde un CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert -->
 </head>
 <body>
     <div class="inicio-container">
         <div class="header">
-            <span>Ash Ketchum</span>
+            <span id="user-name">Nombre del Usuario</span>
             <div class="logo">
                 <img src="../IMAGENES/pokemon_bank_logo.png" alt="Logo Banco">
             </div>
-            <div class="time">
-                <span>10:05 AM, 14 Octubre</span>
-            </div>
+            <div class="time" id="time"></div>
         </div>
 
         <h2>SELECCIONE UN SERVICIO</h2>
@@ -28,7 +25,7 @@
             <button class="service-btn" onclick="location.href='../CONSULTA DE SALDOS/consulta_saldos.html'">CONSULTA DE SALDO</button>
             <button class="service-btn" onclick="location.href='../RETIRO/retiro.html'">RETIRO</button>
             <button class="service-btn" onclick="location.href='../SERVICIOS/servicios.html'">PAGO DE SERVICIOS</button>
-            <button class="service-btn" onclick="location.href='../historial/historial.html'">HISTORIAL DE TRANSACCIONES</button>
+            <button class="service-btn" onclick="location.href='../HISTORIAL/historial.html'">HISTORIAL DE TRANSACCIONES</button>
         </div>
 
         <div class="buttons">
@@ -37,26 +34,6 @@
         </div>
     </div>
 
-    <script>
-        // Función que muestra la alerta de advertencia de SweetAlert
-        function confirmarSalida() {
-            Swal.fire({
-                title: 'Está a punto de salir',
-                text: '¿Desea continuar?',
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Sí, salir',
-                cancelButtonText: 'Cancelar'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    // Redirige a la página de inicio (index.html) si confirma
-                    window.location.href = '../index.html';
-                }
-            });
-        }
-    </script>
-
+    <script src="inicio.js"></script>
 </body>
 </html>
