--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eleccion de tarjeta</title>
+    <title>Elección de tarjeta</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -14,9 +14,9 @@
             <div class="carousel">
                 <a href="PIN/PIN.html" class="card card1"></a>
                 <a href="PIN/PIN.html" class="card card2"></a>
-                <a href="pin.html" class="card card3">3</a>
-                <a href="pin.html" class="card card4">4</a>
-                <a href="pin.html" class="card card5">5</a>
+                <a href="PIN/PIN.html" class="card card3"></a>
+                <a href="PIN/PIN.html" class="card card4"></a>
+                <a href="PIN/PIN.html" class="card card5"></a>
             </div>
 
             <!-- Botones Anterior y Siguiente -->
@@ -27,9 +27,6 @@
         </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
