--- a/INICIO/INICIO.html
+++ b/INICIO/INICIO.html
@@ -22,7 +22,7 @@
 
         <div class="services">
             <button class="service-btn" onclick="location.href='../DEPOSITO/deposito.html'">DEPÓSITO</button>
-            <button class="service-btn" onclick="location.href='../CONSULTA DE SALDOS/consulta_saldos.html'">CONSULTA DE SALDO</button>
+            <button class="service-btn" onclick="location.href='../CONSULTA DE SALDOS/consultadeSaldoP.html'">CONSULTA DE SALDO</button>
             <button class="service-btn" onclick="location.href='../RETIRO/retiro.html'">RETIRO</button>
             <button class="service-btn" onclick="location.href='../SERVICIOS/servicios.html'">PAGO DE SERVICIOS</button>
             <button class="service-btn" onclick="location.href='../HISTORIAL/historial.html'">HISTORIAL DE TRANSACCIONES</button>
