--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Elección de tarjeta</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert -->
+
 </head>
 <body>
     <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -23,6 +25,9 @@
             <div class="controls">
                 <button id="prev" class="btn btn-dark">Anterior</button>
                 <button id="next" class="btn btn-dark">Siguiente</button>
+            </div>
+            <div class="control-borrar">
+                <button id="borrar" class="btn btn-danger">Restablecer demo</button>
             </div>
         </div>
     </div>
