--- a/SERVICIOS/pago_servicio.html
+++ b/SERVICIOS/pago_servicio.html
@@ -6,6 +6,7 @@
     <title>Pagar Servicio</title>
     <link href="pago_servicio.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert -->
+    <script src="https://cdn.jsdelivr.net/npm/jspdf@2.4.0/dist/jspdf.umd.min.js"></script>
 </head>
 <body>
     <div class="contenedor">
@@ -23,7 +24,7 @@
 
             <!-- Campo de entrada estilizado para el NPE -->
             <div class="npe-display">
-                <input type="text" id="npeInput" class="amount-input" placeholder="000000" maxlength="6" oninput="limitarNPE()" onkeypress="return soloNumeros(event)">
+                <input type="text" id="npeInput" class="amount-input" placeholder="000000" maxlength="6" oninput="limitarSoloNumeros()" onkeypress="return soloNumeros(event)">
             </div>
 
             <!-- Teclado para ingresar el NPE -->
