--- a/INICIO/INICIO.html
+++ b/INICIO/INICIO.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> <!-- SweetAlert -->
 </head>
 <body>
+<div class="contenedor">
     <div class="inicio-container">
         <div class="header">
             <span id="user-name">Nombre del Usuario</span>
@@ -33,6 +34,7 @@
             <button class="btn btn-danger exit-btn" onclick="confirmarSalida()">SALIR</button>
         </div>
     </div>
+</div>
 
     <script src="inicio.js"></script>
 </body>
