--- a/PIN/PIN.html
+++ b/PIN/PIN.html
@@ -35,15 +35,14 @@
                 <button class="pin-btn">7</button>
                 <button class="pin-btn">8</button>
                 <button class="pin-btn">9</button>
-                <button class="pin-btn">0</button>
                 <button class="pin-btn delete-btn">&lt;</button>
+                <button class="pin-btn">0</button>
+                <button class="pin-btn clear-btn">C</button>
             </div>
         </div>
         
         <div class="buttons">
-            <!-- Botón para regresar a index.html -->
             <button class="btn btn-danger exit-btn" onclick="location.href='../index.html'">REGRESAR</button>
-            <!-- Botón para confirmar el PIN -->
             <button class="btn btn-primary confirm-btn" id="confirm-btn">CONFIRMAR</button>
         </div>
     </div>
