--- a/SERVICIOS/servicios.html
+++ b/SERVICIOS/servicios.html
@@ -40,9 +40,24 @@
         }
 
         document.addEventListener('DOMContentLoaded', () => {
-            const userName = document.getElementById('user-name');
-            userName.textContent = localStorage.getItem('selectedCardUserName') || "Usuario Desconocido";
+            const userNameElement = document.getElementById('user-name');
 
+            // Obtener el índice del usuario seleccionado desde el localStorage
+            const selectedCardIndex = localStorage.getItem('selectedCard');
+
+            // Definir los nombres de usuario según el índice
+            const usuarios = {
+                0: 'Ash Ketchum',
+                1: 'Misty Waterflower',
+                2: 'Brock Harrison',
+                3: 'Gary Oak',
+                4: 'Team Rocket'
+            };
+
+            // Actualizar el nombre del usuario en la pantalla
+            userNameElement.textContent = usuarios[selectedCardIndex] || "Usuario Desconocido";
+
+            // Actualizar la hora
             const timeElement = document.getElementById('time');
             const updateDateTime = () => {
                 const now = new Date();
